Fri Apr 10 08:00:17 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_process.rb: unfortunately, windows is not POSIX...
	  cygwin has mkfifo command, but it does not affect system-wide.

Fri Apr 10 02:18:53 2015  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_process.rb: Use mkfifo command instead of mknod
	  command to create a named file.  mkfifo command is defined by POSIX.

Fri Apr 10 01:29:05 2015  Tanaka Akira  <akr@fsij.org>

	* process.c: Release GVL when opening a file in spawn() to avoid whole
	  process blocking when opening a named pipe.
	  (open_func): New function.
	  (rb_execarg_parent_start1): Extracted from rb_execarg_parent_start and
	  use rb_thread_call_without_gvl2 to release GVL when opening a file.
	  (rb_execarg_parent_start): Invoke rb_execarg_parent_start1 via
	  rb_protect and invoke rb_execarg_parent_end when error.

Thu Apr  9 22:19:19 2015  Tanaka Akira  <akr@fsij.org>

	* process.c (redirect_open): Removed.

Thu Apr  9 21:38:20 2015  Tanaka Akira  <akr@fsij.org>

	* internal.h (rb_execarg_parent_end): Declared.

	* process.c: "spawn" opens files in the parent process.
	  (check_exec_redirect): Add an placeholder for fd in parameters
	  for fd_open.
	  (check_exec_fds_1): Delete fd_open condition.
	  (check_exec_fds): Don't call check_exec_fds_1 with fd_open.
	  (rb_execarg_parent_start): Open files specified as "spawn" options
	  and add "dup2" options.
	  (rb_execarg_parent_end): New function to close opened fds.
	  (run_exec_open): Removed.
	  (rb_execarg_run_options): Don't call run_exec_open.
	  (rb_spawn_internal): Call rb_execarg_parent_end.

	* io.c (pipe_open): Call rb_execarg_parent_end.

	* ext/pty/pty.c (establishShell): Call rb_execarg_parent_end.

Thu Apr  9 20:52:31 2015  Tanaka Akira  <akr@fsij.org>

	* internal.h (rb_execarg_parent_start): Renamed from rb_execarg_fixup.

	* process.c: Follows the above change.

	* io.c: Ditto.

	* ext/pty/pty.c: Ditto.
